# observation-library

./: README.md  pyproject.toml
src/ObservationLibrary/: __init__.py  multi_video_capture.py  observation_library.py  video_server.py  video_snippet.py
src/ObservationLibrary/v_utils/: v_render_settings_dialog.py  v_video_container.py  v_video_snippet_display.py
src/ObservationLibrary/v_utils/templates/: RenderSettingsInput.vue  VideoContainer.vue
src/observation_library/: __init__.py  multi_video_capture.py  observation_library.py  render_settings.py  server.html  utils.py  video_server.py  video_snippet.py
src/observation_library/v_utils/: v_color_picker.py  v_progress_bar.py  v_render_settings_dialog.py  v_render_settings_input.py  v_video_container.py  v_video_snippet_display.py
src/observation_library/v_utils/templates/: ColorPicker.vue  ProgressBar.vue  RenderSettingsInput.vue  VideoContainer.vue
