[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "observation_library"
version = "0.0.1"
dependencies = ["numpy>=2.0", "pandas", "ipyvuetify"]

[tool.pyright]
venvPath = "/home/paul/miniforge3/envs"
venv = "vuetify"

[tool.ruff.lint]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105"]

[tool.ruff.lint.pydocstyle]
convention = "numpy" # Accepts: "google", "numpy", or "pep257".

[tool.ruff.format]
docstring-code-format = true
